--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
 
         <script src="./assets/js/main.js" defer></script>
-        <script src="./assets/js/common.js" defer></script>
-        <script src="./assets/js/jquery.js" defer></script>
+        <script src="./assets/js/swiper.js" defer></script>
         <!-- jquery -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <!-- swiper -->
